# popbuster

./: .gitignore  README.md  pyproject.toml
assets/: tapes.json
scripts/: cut-clip  cut-clip-batch  deploy-pi  install-pi-autostart  install-pi-kiosk  install-pi-plymouth  restore-pi-desktop  run-pi  run-pi-kiosk-session  transcode-video  validate-library
src/popbuster/: __init__.py  __main__.py  app.py  catalog.py  config.py  ports.py  resume.py
src/popbuster/adapters/: __init__.py
src/popbuster/ui/: __init__.py  qt_app.py
support/lightdm/: popbuster-kiosk.desktop.in
support/plymouth/popbuster/: popbuster.plymouth  popbuster.script
support/systemd/: popbuster.service
